Added profile pic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Your Name</h2>
 ​
         <!-- Image with link -->
-        <img src="https://placehold.it/200x200" alt="Your Name" />
+        <img src="images/ProfilePic.jpg" alt="James Hernandez profile pic" />
 ​
         <!-- Paragraph with embedded link -->
         <p>
