--- a/index.html
+++ b/index.html
@@ -1,45 +1,58 @@
 <!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Activity 1: Basic HTML Bio</title>
-  </head>
-​
-  <body>
-    <!-- Site Header -->
-    <header>
-      <!-- h1: The most important headline -->
-      <h1>Student Bio</h1>
-    </header>
-​
-    <div>
-      <!-- Section 1: Bio -->
-      <section>
-        <!-- h2: Tier-2 Headline (Not as important as the h1 header, but more than one allowed). -->
-        <h2>Your Name</h2>
-​
-        <!-- Image with link -->
-        <img src="images/ProfilePic.jpg" alt="James Hernandez profile pic" />
-​
-        <!-- Paragraph with embedded link -->
-        <p>
-          Write a short paragraph or two about yourself, or use placeholder text from
-          <a href="http://www.lipsum.com/">www.lipsum.com</a>
-        </p>
-      </section>
-​
-      <!-- Section 2: Contact Info -->
-      <section>
-        <!-- h2: Tier-2 Headline -->
-        <h2>Contact Info</h2>
-​
-        <!-- Unordered list -->
-        <ul>
-          <li><strong>Email: antonioblah@gmail.com</strong> <a href="#">someplace@gmail.com</a></li>
-          <li><strong>Github:</strong> <a href="#">sampleName</a></li>
-          <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
-        </ul>
-      </section>
+<html>
+
+<head>
+    <title>James Hernandez Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>
+    <div class="wrapper">
+        <nav class="clearfix">
+            <a href="#">James Hernandez</a>
+            <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a>
+        </nav>
+
+        <header>
+            <h1>UI Design + Prototyping</h1>
+            <p>Designing for Adobe for over 4 years and freelancing on the side. Happy to work with you just send me an <a href="#">email</a>.</p>
+        </header>
+
+        <div class="work">
+            <a href="#"><img src="images/01.png" alt="project image"></a>
+            <a href="#"><img src="images/02.png" alt="project image"></a>
+            <a href="#"><img src="images/03.png" alt="project image"></a>
+            <a href="#"><img src="images/04.png" alt="project image"></a>
+            <a href="#"><img src="images/05.png" alt="project image"></a>
+            <a href="#"><img src="images/06.png" alt="project image"></a>
+        </div>
+
+        <div class="whatIDo">
+            <h1>Everything<br />You Need</h1>
+            <h2 class="iAm">I AM</h2>
+            <ul>
+                <li>User Interface Design</li>
+                <li>User Experience Design</li>
+                <li>Prototyping</li>
+                <li>Interaction Design</li>
+                <li>Graphic Design</li>
+                <li>Front-end Developer</li>
+                <li>Visual Design</li>
+            </ul>
+        </div>
+
+        <div class="work2">
+            <a href="#"><img src="images/Large_01.png" alt="project image"></a>
+            <a href="#"><img src="images/Large_02.png" alt="project image"></a>
+        </div>
+
+        <footer>
+            <p>© 2019 James Hernandez</p>
+        </footer>
+
     </div>
-  </body>
+</body>
+
 </html>
