--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <nav class="clearfix">
             <a href="#">James Hernandez</a>
-            <a href="#">956.453.1900</a>
+            <!-- <a href="#">956.453.1900</a> -->
             <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a>
         </nav>
     </div>
