Added email to check alignment
added email address to see how it aligns to nav

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="wrapper">
         <nav class="clearfix">
             <a href="#">James Hernandez</a>
-            <!-- <a href="#">956.453.1900</a> -->
+            <a href="#">956.453.1900</a>
+            <a href="#">jameshdzdesigns@gmail.com</a>
             <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a>
         </nav>
     </div>
