added CSS display: inline-root;
.clearFloat {
    display: flow-root;
}

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="wrapper">
-        <nav class="clearfix">
+        <nav class="clearFloat">
             <a href="#">James Hernandez</a>
             <a href="#">956.453.1900</a>
             <a href="#">jameshdzdesigns@gmail.com</a>
