--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <div class="wrapper">
         <nav class="clearFloat">
             <a href="#">James Hernandez</a>
-            <a href="#">956.453.1900</a>
-            <a href="#">jameshdzdesigns@gmail.com</a>
+            <a href="#">Profile</a>
+            <a href="#">Work</a>
+            <a href="#">Contact</a>
             <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a>
         </nav>
     </div>
