--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <div class="wrapper">
         <nav class="clearFloat">
             <a href="#">James Hernandez</a>
-            <a href="#">Profile</a>
-            <a href="#">Work</a>
-            <a href="#">Contact</a>
+            <ul>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact</a></li>
+            </ul>
             <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a>
         </nav>
     </div>
