Commented out lines to test
Commented out lines of code to test alignment of topnav

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 <body>
     <div class="wrapper">
         <nav class="clearFloat">
-            <a href="#">James Hernandez</a>
+            <div>
+                <a href="#">James Hernandez</a>
+            </div>
             <ul>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
-            <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a>
+            <!-- <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a> -->
         </nav>
     </div>
 </body>
