--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
             </ul>
             <!-- <a href="#"><img src="images/dribbble_icon.png" alt="dribbble icon"></a> -->
         </nav>
+
+        <header>
+                <h1>UI Design + Prototyping</h1>
+                <p>Designing for Adobe for over 4 years and freelancing on the side. Happy to work with you just send me an <a href="#">email</a>.</p>
+        </header>
+
     </div>
 </body>
 
