Added new background photo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
 
         <header>
-                <h1>UI Design + Prototyping</h1>
+                <h1>Hello, I'm<br />James Hernandez.</h1>
                 <p>Designing for Adobe for over 4 years and freelancing on the side. Happy to work with you just send me an <a href="#">email</a>.</p>
         </header>
 
