--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </nav>
 
         <header>
-                <h1>Hello, I'm<br />James Hernandez.</h1>
-                <p>Designing for Adobe for over 4 years and freelancing on the side. Happy to work with you just send me an <a href="#">email</a>.</p>
+                <h1>Hello, I'm<br />James Hernandez</h1>
+                <p>Teacher turned UX Designer who's passionate about<br />design and might be a bit of a typophile.</p>
         </header>
 
     </div>
