--- a/index.html
+++ b/index.html
@@ -105,57 +105,64 @@
       </div>
     </section>
     <div class="main">
-      <section class="module" id="projects">
+      <section class="module pb-0">
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 col-sm-offset-3">
-              <h2 class="module-title font-alt">Projects</h2>
-              <div class="module-subtitle font-serif"></div>
+            <div class="col-sm-12">
+              <h2 class="module-title font-alt" href="#projects">My Projects</h2>
             </div>
           </div>
         </div>
-        <div class="container">
-            <ul class="works-grid works-grid-gut works-grid-3 works-hover-w" id="works-grid">
-                <li class="work-item"><a href="portfolio_single_featured_image1.html">
-                    <div class="work-image"><img src="assets/images/portfolio/PackstrIcon.png" alt="Packstr project icon"/></div>
-                    <div class="work-caption font-alt">
-                      <h3 class="work-title">Packstr</h3>
-                      <div class="work-descr">Travel App</div>
-                      <div class="work-descr2">UX/UI Design, UX Research</div>
-                    </div></a></li>
-                <li class="work-item"><a href="portfolio_single_featured_image2.html">
-                    <div class="work-image"><img src="assets/images/portfolio/FindMyFitIcon.png" alt="Portfolio Item"/></div>
-                    <div class="work-caption font-alt">
-                      <h3 class="work-title">Find My Fit</h3>
-                      <div class="work-descr">Clothing Match App</div>
-                      <div class="work-descr2">UX/UI Design, UX Research</div>
-                    </div></a></li>
-                <li class="work-item"><a href="portfolio_single_featured_slider1.html">
-                    <div class="work-image"><img src="assets/images/portfolio/SaveAnAngelIcon.png" alt="Portfolio Item"/></div>
-                    <div class="work-caption font-alt">
-                      <h3 class="work-title">Save An Angel</h3>
-                      <div class="work-descr">Pet Rescue Non-Profit</div>
-                    </div></a></li>
-                <!-- <li class="work-item marketing photography"><a href="portfolio_single_featured_slider2.htmll">
-                    <div class="work-image"><img src="assets/images/portfolio/grid-portfolio4.jpg" alt="Portfolio Item"/></div>
-                    <div class="work-caption font-alt">
-                      <h3 class="work-title">Business Card</h3>
-                      <div class="work-descr">Photography</div>
-                    </div></a></li>
-                <li class="work-item illustration webdesign"><a href="portfolio_single_featured_video1.html">
-                    <div class="work-image"><img src="assets/images/portfolio/grid-portfolio5.jpg" alt="Portfolio Item"/></div>
-                    <div class="work-caption font-alt">
-                      <h3 class="work-title">Web Design</h3>
-                      <div class="work-descr">Webdesign</div>
-                    </div></a></li>
-                <li class="work-item marketing webdesign"><a href="portfolio_single_featured_video2.html">
-                    <div class="work-image"><img src="assets/images/portfolio/grid-portfolio6.jpg" alt="Portfolio Item"/></div>
-                    <div class="work-caption font-alt">
-                      <h3 class="work-title">Paper clip</h3>
-                      <div class="work-descr">Marketing</div>
-                    </div></a></li> -->
-              </ul>
-        </div>
+        <ul class="works-grid works-grid-gut works-hover-w works-grid-3" id="works-grid">
+          <li class="work-item illustration webdesign"><a href="portfolio_single_featured_image1.html">
+              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio1.jpg" alt="Portfolio Item" />
+              </div>
+              <div class="work-caption font-alt">
+                <h3 class="work-title">Corporate Identity</h3>
+                <div class="work-descr">Illustration</div>
+              </div>
+            </a></li>
+          <li class="work-item marketing photography"><a href="portfolio_single_featured_image2.html">
+              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio2.jpg" alt="Portfolio Item" />
+              </div>
+              <div class="work-caption font-alt">
+                <h3 class="work-title">Bag MockUp</h3>
+                <div class="work-descr">Marketing</div>
+              </div>
+            </a></li>
+          <li class="work-item illustration photography"><a href="portfolio_single_featured_slider1.html">
+              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio3.jpg" alt="Portfolio Item" />
+              </div>
+              <div class="work-caption font-alt">
+                <h3 class="work-title">Disk Cover</h3>
+                <div class="work-descr">Illustration</div>
+              </div>
+            </a></li>
+          <li class="work-item marketing photography"><a href="portfolio_single_featured_slider2.htmll">
+              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio4.jpg" alt="Portfolio Item" />
+              </div>
+              <div class="work-caption font-alt">
+                <h3 class="work-title">Business Card</h3>
+                <div class="work-descr">Photography</div>
+              </div>
+            </a></li>
+          <li class="work-item illustration webdesign"><a href="portfolio_single_featured_video1.html">
+              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio5.jpg" alt="Portfolio Item" />
+              </div>
+              <div class="work-caption font-alt">
+                <h3 class="work-title">Web Design</h3>
+                <div class="work-descr">Webdesign</div>
+              </div>
+            </a></li>
+          <li class="work-item marketing webdesign"><a href="portfolio_single_featured_video2.html">
+              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio6.jpg" alt="Portfolio Item" />
+              </div>
+              <div class="work-caption font-alt">
+                <h3 class="work-title">Paper clip</h3>
+                <div class="work-descr">Marketing</div>
+              </div>
+            </a></li>
+        </ul>
       </section>
       <section class="module-small-home bg-dark">
         <div class="container">
