adding current position

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
     </nav>
     <section class="home-section bg-dark-60 portfolio-page-header parallax-bg" id="home"
-      data-background="assets/images/AboutMeBGPhoto.jpg">
+      data-background="./assets/images/AboutMeBGPhoto.jpg">
       <div class="titan-caption">
         <div class="caption-content">
           <div class="font-alt mb-30 titan-title-size-1">Hello, I am</div>
