changed top margin

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png"> -->
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/personalLogo.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/personalLogo.png">
   <link rel="manifest" href="/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
   <!-- <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png"> -->
@@ -105,61 +105,37 @@
       </div>
     </section>
     <div class="main">
-      <section class="module pb-0">
+      <section class="module pb-0" id="projects">
         <div class="container">
           <div class="row">
             <div class="col-sm-12">
-              <h2 class="module-title font-alt" href="#projects">My Projects</h2>
+              <h2 class="module-title font-alt">My Projects</h2>
             </div>
           </div>
         </div>
         <ul class="works-grid works-grid-gut works-hover-w works-grid-3" id="works-grid">
           <li class="work-item illustration webdesign"><a href="portfolio_single_featured_image1.html">
-              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio1.jpg" alt="Portfolio Item" />
+              <div class="work-image"><img src="assets/images/portfolio/PackstrIcon.png" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
-                <h3 class="work-title">Corporate Identity</h3>
-                <div class="work-descr">Illustration</div>
+                <h3 class="work-title">Packstr/h3>
+                <div class="work-descr">Travel App</div>
               </div>
             </a></li>
           <li class="work-item marketing photography"><a href="portfolio_single_featured_image2.html">
-              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio2.jpg" alt="Portfolio Item" />
+              <div class="work-image"><img src="assets/images/portfolio/FindMyFitIcon.png" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
-                <h3 class="work-title">Bag MockUp</h3>
-                <div class="work-descr">Marketing</div>
+                <h3 class="work-title">Find My Fit</h3>
+                <div class="work-descr">Fashion Match App</div>
               </div>
             </a></li>
           <li class="work-item illustration photography"><a href="portfolio_single_featured_slider1.html">
-              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio3.jpg" alt="Portfolio Item" />
+              <div class="work-image"><img src="assets/images/portfolio/SaveAnAngelIcon.png" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
-                <h3 class="work-title">Disk Cover</h3>
-                <div class="work-descr">Illustration</div>
-              </div>
-            </a></li>
-          <li class="work-item marketing photography"><a href="portfolio_single_featured_slider2.htmll">
-              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio4.jpg" alt="Portfolio Item" />
-              </div>
-              <div class="work-caption font-alt">
-                <h3 class="work-title">Business Card</h3>
-                <div class="work-descr">Photography</div>
-              </div>
-            </a></li>
-          <li class="work-item illustration webdesign"><a href="portfolio_single_featured_video1.html">
-              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio5.jpg" alt="Portfolio Item" />
-              </div>
-              <div class="work-caption font-alt">
-                <h3 class="work-title">Web Design</h3>
-                <div class="work-descr">Webdesign</div>
-              </div>
-            </a></li>
-          <li class="work-item marketing webdesign"><a href="portfolio_single_featured_video2.html">
-              <div class="work-image"><img src="assets/images/portfolio/grid-portfolio6.jpg" alt="Portfolio Item" />
-              </div>
-              <div class="work-caption font-alt">
-                <h3 class="work-title">Paper clip</h3>
-                <div class="work-descr">Marketing</div>
+                <h3 class="work-title">Save An Angel</h3>
+                <div class="work-descr">Non-Profit Pet Rescue Website</div>
               </div>
             </a></li>
         </ul>
