made some sizing adjustments to font
I enlarged font size on About page but it seems to have also increased the size of the container which has also increased the size of my about me picture.

--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
   <link href="assets/lib/components-font-awesome/css/font-awesome.min.css" rel="stylesheet">
   <link href="assets/lib/et-line-font/et-line-font.css" rel="stylesheet">
   <link href="assets/lib/flexslider/flexslider.css" rel="stylesheet">
-  <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet">
+  <!-- <link href="assets/lib/owl.carousel/dist/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/lib/owl.carousel/dist/assets/owl.theme.default.min.css" rel="stylesheet"> -->
   <link href="assets/lib/magnific-popup/dist/magnific-popup.css" rel="stylesheet">
   <link href="assets/lib/simple-text-rotator/simpletextrotator.css" rel="stylesheet">
   <!-- Main stylesheet and color file-->
@@ -161,7 +161,7 @@
         </section> -->
       <section class="module pt-30 pb-0" id="about">
         <div class="row position-relative m-0">
-          <div class="col-xs-12 col-md-6 side-image" data-background="assets/images/profilePic.jpg"></div>
+          <div class="col-xs-12 col-md-6 side-image" data-background="assets/images/section-14.jpg"></div>
           <div class="col-xs-12 col-md-6 col-md-offset-6 side-image-text">
             <div class="row">
               <div class="col-sm-12">
@@ -313,7 +313,7 @@
           <div class="row">
             <div class="col-sm-3">
               <div class="widget">
-                <h5 class="widget-title font-alt">About Titan</h5>
+                <h5 class="widget-title font-alt">What can I do for you?</h5>
                 <p>If you like what you see, let me know how I can help keep your business successfuls.</p>
               </div>
             </div>
@@ -327,7 +327,7 @@
               <div class="widget">
                 <h5 class="widget-title font-alt">Email</h5>
                 <ul class="widget-posts">
-                  <a href="#">somecompany@example.com</a>
+                  <a href="#">jameshdzdesigns@gmail.com</a>
                 </ul>
               </div>
             </div>
