--- a/index.html
+++ b/index.html
@@ -76,9 +76,13 @@
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Single1</a>
+                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
                 </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Single2</a>
+                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My
+                    Fit</a>
+                </li>
+                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An
+                    Angel</a>
                 </li>
             </li>
           </ul>
@@ -118,7 +122,7 @@
               <div class="work-image"><img src="assets/images/portfolio/PackstrIcon.png" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
-                <h3 class="work-title">Packstr/h3>
+                <h3 class="work-title">Packstr</h3>
                 <div class="work-descr">Travel App</div>
               </div>
             </a></li>
@@ -216,7 +220,7 @@
           <div class="row">
             <div class="col-sm-3">
               <div class="widget">
-                <h5 class="widget-title font-alt">About Titan</h5>
+                <h5 class="widget-title font-alt">What can I do for you?</h5>
                 <p>If you like what you see, let me know how I can help keep your business successful.</p>
               </div>
             </div>
@@ -230,7 +234,7 @@
               <div class="widget">
                 <h5 class="widget-title font-alt">Email</h5>
                 <ul class="widget-posts">
-                  <a href="#">somecompany@example.com</a>
+                  <a href="#">jameshdzdesigns@gmail.com</a>
                 </ul>
               </div>
             </div>
