Made min-height adjustment

--- a/about.html
+++ b/about.html
@@ -161,10 +161,11 @@
         </section> -->
       <section class="module pt-30 pb-0" id="about">
         <div class="row position-relative m-0">
-          <div class="col-xs-12 col-md-6 side-image" data-background="assets/images/section-14.jpg"></div>
+          <div class="col-xs-12 col-md-6 side-image aboutMeImage" data-background="assets/images/aboutMeImage.jpg"></div>
           <div class="col-xs-12 col-md-6 col-md-offset-6 side-image-text">
             <div class="row">
               <div class="col-sm-12">
+                <div class="aboutMeText">
                 <h2 class="module-title font-alt align-left">This is James Hernandez</h2>
                 <div class="module-subtitle font-serif align-left">A wonderful serenity has taken possession of my
                   entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</div>
@@ -174,6 +175,7 @@
                   create user interactions and experiences people love to use. Persistence, curiosity and an obsessive
                   attention to detail define me. With a background in teaching, and experience as a digital designer and
                   developer, I excel in communication and competent in all aspects of the design process.</p>
+                  </div>
               </div>
             </div>
           </div>
