Changed font size for about me page

--- a/index.html
+++ b/index.html
@@ -62,39 +62,39 @@
     <div class="page-loader">
       <div class="loader">Loading...</div>
     </div>
-    <nav class="navbar navbar-custom navbar-fixed-top navbar-transparent" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
-              class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
-              class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
-        </div>
-        <div class="collapse navbar-collapse" id="custom-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown"><a href="index.html">Home</a>
+    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
+                class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
+                class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
+          </div>
+          <div class="collapse navbar-collapse" id="custom-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown"><a href="index.html">Home</a>
+              </li>
+              <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
+                  data-toggle="dropdown">Projects</a>
+                <ul class="dropdown-menu" role="menu">
+                  <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
+                  </li>
+                  <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My Fit</a>
+                  </li>
+                  <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An Angel</a>
+                  </li>
+              </li>
+            </ul>
             </li>
-            <li class="dropdown"><a class="dropdown-toggle section-scroll" href="#projects"
-                data-toggle="dropdown">Projects</a>
-              <ul class="dropdown-menu" role="menu">
-                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
-                </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My
-                    Fit</a>
-                </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An
-                    Angel</a>
-                </li>
+            <li class="dropdown"><a href="contact.html">Resume</a>
             </li>
-          </ul>
-          </li>
-          <li class="dropdown"><a href="about.html">About</a>
-          </li>
-          <li class="dropdown"><a href="contact.html">Contact</a>
-          </li>
-          </ul>
+            <li class="dropdown"><a href="contact.html">Contact</a>
+            </li>
+            <li class="dropdown"><a href="about.html">About</a>
+            </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
     <section class="home-section bg-dark-60 portfolio-page-header parallax-bg" id="home"
       data-background="./assets/images/AboutMeBGPhoto.jpg">
       <div class="titan-caption">
@@ -216,31 +216,31 @@
         </div>
       </section> -->
       <div class="module-small bg-dark">
-        <div class="container">
-          <div class="row">
-            <div class="col-sm-3">
-              <div class="widget">
-                <h5 class="widget-title font-alt">What can I do for you?</h5>
-                <p>If you like what you see, let me know how I can help keep your business successful.</p>
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-3">
+                <div class="widget">
+                  <h5 class="widget-title font-alt">Let's work together</h5>
+                  <p>If you like what you see, let me know how I can be a part of your team.</p>
+                </div>
               </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="widget">
-                <h5 class="widget-title font-alt">Phone</h5>
-                <p>956.453.1900</p>
+              <div class="col-sm-3">
+                <div class="widget">
+                  <h5 class="widget-title font-alt">Phone</h5>
+                  <p>956.453.1900</p>
+                </div>
               </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="widget">
-                <h5 class="widget-title font-alt">Email</h5>
-                <ul class="widget-posts">
-                  <a href="#">jameshdzdesigns@gmail.com</a>
-                </ul>
+              <div class="col-sm-3">
+                <div class="widget">
+                  <h5 class="widget-title font-alt">Email</h5>
+                  <ul class="widget-posts">
+                    <a href="#">jameshdzdesigns@gmail.com</a>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
       <hr class="divider-d">
       <footer class="footer bg-dark">
         <div class="container">
