--- a/about.html
+++ b/about.html
@@ -67,7 +67,8 @@
         <div class="navbar-header">
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
               class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
-              class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
+              class="icon-bar"></span></button>
+              <a class="navbar-brand" href="index.html"><img src="./assets/images/personalLogo.png" width="15%" height="auto"/>James Hernandez</a>
         </div>
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -76,16 +77,22 @@
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Single1</a>
+                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
                 </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Single2</a>
+                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My
+                    Fit</a>
+                </li>
+                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An
+                    Angel</a>
                 </li>
             </li>
           </ul>
           </li>
-          <li class="dropdown"><a href="about.html">About</a>
+          <li class="dropdown"><a href="contact.html">Resume</a>
           </li>
           <li class="dropdown"><a href="contact.html">Contact</a>
+          </li>
+          <li class="dropdown"><a href="about.html">About</a>
           </li>
           </ul>
         </div>
@@ -97,8 +104,8 @@
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
               <h2 class="module-title font-alt">About Me</h2>
-              <div class="module-subtitle font-serif">A wonderful serenity has taken possession of my entire soul, like
-                these sweet mornings of spring which I enjoy with my whole heart.</div>
+              <div class="module-subtitle font-serif">"Have no fear of perfection - you'll never reach it."<br /> -
+                Salvador Dali</div>
             </div>
           </div>
         </div>
@@ -161,21 +168,25 @@
         </section> -->
       <section class="module pt-30 pb-0" id="about">
         <div class="row position-relative m-0">
-          <div class="col-xs-12 col-md-6 side-image aboutMeImage" data-background="assets/images/aboutMeImage.jpg"></div>
+          <div class="col-xs-12 col-md-6 side-image aboutMeImage" data-background="assets/images/aboutMeImage.jpg">
+          </div>
           <div class="col-xs-12 col-md-6 col-md-offset-6 side-image-text">
             <div class="row">
               <div class="col-sm-12">
                 <div class="aboutMeText">
-                <h2 class="module-title font-alt align-left">This is James Hernandez</h2>
-                <div class="module-subtitle font-serif align-left">A wonderful serenity has taken possession of my
-                  entire soul, like these sweet mornings of spring which I enjoy with my whole heart.</div>
-                <p>I am a teacher turned UX designer who's driven by curiosity and passionate about design. I love font
-                  and color and will spend hours, maybe days, deciding which one to use. Yes, I'm that guy.</p>
-                <p>My unique skill-set lets me bring a teaching perspective and creative problem-solving approach to
-                  create user interactions and experiences people love to use. Persistence, curiosity and an obsessive
-                  attention to detail define me. With a background in teaching, and experience as a digital designer and
-                  developer, I excel in communication and competent in all aspects of the design process.</p>
-                  </div>
+                  <h2 class="module-title font-alt align-left aboutMeTitle">This is James Hernandez</h2>
+                  <div class="module-subtitle font-serif align-left aboutMeSubtitle">UX Designer and Creative based in
+                    Austin, Texas</div>
+                  <p>I am an educator turned UX designer who's driven by curiosity and passionate about design. I love
+                    font
+                    and color and will spend hours, maybe days, deciding which one to use. OK, maybe only a little bit
+                    of that last part is true.</p>
+                  <p>My unique skill-set lets me bring a teaching perspective and creative problem-solving approach to
+                    create user interactions and experiences people love to use. Persistence, curiosity and an obsessive
+                    attention to detail define me. With a background in teaching, and experience as a digital designer
+                    and
+                    developer, I excel in communication and competent in all aspects of the design process.</p>
+                </div>
               </div>
             </div>
           </div>
@@ -270,41 +281,43 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3">
-              <h2 class="module-title font-alt">Our Advantages</h2>
+              <h2 class="module-title font-alt">Fun Facts</h2>
               <div class="module-subtitle font-serif"></div>
             </div>
           </div>
           <div class="row multi-columns-row">
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="features-item">
-                <div class="features-icon"><span class="icon-lightbulb"></span></div>
-                <h3 class="features-title font-alt">Ideas and concepts</h3>
-                <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all
-                  your visitors.</p>
+                <div class="features-icon"><span class="icon-puzzle"></span></div>
+                <h3 class="features-title font-alt">Adaptability</h3>
+                <p>My experience as an educator has allowed me to empathize with others, and adapt my teaching and
+                  communication skills for people of different learning calibers.</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="features-item">
                 <div class="features-icon"><span class="icon-bike"></span></div>
-                <h3 class="features-title font-alt">Optimised for speed</h3>
-                <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all
-                  your visitors.</p>
+                <h3 class="features-title font-alt">I love the outdoors</h3>
+                <p>Any chance I get, I make it a point to head outside and reconnect with nature. Hiking is my way to
+                  reflect
+                  and recollect.</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="features-item">
-                <div class="features-icon"><span class="icon-tools"></span></div>
-                <h3 class="features-title font-alt">Designs &amp; interfaces</h3>
-                <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all
-                  your visitors.</p>
+                <div class="features-icon"><span class="icon-map"></span></div>
+                <h3 class="features-title font-alt">My travels</h3>
+                <p>Hands down my favorite place I have visited is Iceland. They call it the, <i>"Land of Fire and
+                    Ice."</i>
+                  They're not kidding.</p>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12">
               <div class="features-item">
-                <div class="features-icon"><span class="icon-gears"></span></div>
-                <h3 class="features-title font-alt">Highly customizable</h3>
-                <p>Careful attention to detail and clean, well structured code ensures a smooth user experience for all
-                  your visitors.</p>
+                <div class="features-icon"><span class="icon-target"></span></div>
+                <h3 class="features-title font-alt">Humor</h3>
+                <p>My office prank skills are on point. I enjoy collaborating and sharing fun experiences with others.
+                </p>
               </div>
             </div>
           </div>
@@ -315,8 +328,8 @@
           <div class="row">
             <div class="col-sm-3">
               <div class="widget">
-                <h5 class="widget-title font-alt">What can I do for you?</h5>
-                <p>If you like what you see, let me know how I can help keep your business successfuls.</p>
+                <h5 class="widget-title font-alt">Let's work together</h5>
+                <p>If you like what you see, let me know how I can be a part of your team.</p>
               </div>
             </div>
             <div class="col-sm-3">
