--- a/contact.html
+++ b/contact.html
@@ -63,34 +63,38 @@
       <div class="loader">Loading...</div>
     </div>
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
-              class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
-              class="icon-bar"></span></button><a class="navbar-brand" href="index.html">Titan</a>
-        </div>
-        <div class="collapse navbar-collapse" id="custom-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown"><a href="index.html">Home</a>
-            </li>
-            <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
+        <div class="container">
+          <div class="navbar-header">
+            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
+                class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
+                class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
+          </div>
+          <div class="collapse navbar-collapse" id="custom-collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="dropdown"><a href="index.html">Home</a>
+              </li>
+              <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Single1</a>
+                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
                 </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Single2</a>
+                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My Fit</a>
+                </li>
+                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An Angel</a>
                 </li>
             </li>
-          </ul>
-          </li>
-          <li class="dropdown"><a href="about.html">About</a>
-          </li>
-          <li class="dropdown"><a href="contact.html">Contact</a>
-          </li>
-          </ul>
+            </ul>
+            </li>
+            <li class="dropdown"><a href="contact.html">Resume</a>
+            </li>
+            <li class="dropdown"><a href="contact.html">Contact</a>
+            </li>
+            <li class="dropdown"><a href="about.html">About</a>
+            </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
     <div class="main">
       <section class="module bg-dark-60 contact-page-header bg-dark" data-background="assets/images/contact_bg.jpg">
         <div class="container">
@@ -154,8 +158,8 @@
             <div class="row">
               <div class="col-sm-3">
                 <div class="widget">
-                  <h5 class="widget-title font-alt">What can I do for you?</h5>
-                  <p>If you like what you see, let me know how I can help keep your business successfuls.</p>
+                  <h5 class="widget-title font-alt">Let's work together</h5>
+                  <p>If you like what you see, let me know how I can be a part of your team.</p>
                 </div>
               </div>
               <div class="col-sm-3">
