--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
               class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
               class="icon-bar"></span></button>
-              <a class="navbar-brand" href="index.html"><img src="./assets/images/personalLogo.png" width="15%" height="auto"/>James Hernandez</a>
+              <a class="navbar-brand" href="index.html">James Hernandez</a>
         </div>
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
