Corrected menu links and added resume

--- a/index.html
+++ b/index.html
@@ -63,38 +63,41 @@
       <div class="loader">Loading...</div>
     </div>
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
-                class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
-                class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
-          </div>
-          <div class="collapse navbar-collapse" id="custom-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown"><a href="index.html">Home</a>
-              </li>
-              <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
-                  data-toggle="dropdown">Projects</a>
-                <ul class="dropdown-menu" role="menu">
-                  <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
-                  </li>
-                  <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My Fit</a>
-                  </li>
-                  <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An Angel</a>
-                  </li>
-              </li>
-            </ul>
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
+              class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
+              class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
+        </div>
+        <div class="collapse navbar-collapse" id="custom-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown"><a href="index.html">Home</a>
             </li>
-            <li class="dropdown"><a href="contact.html">Resume</a>
+            <li class="dropdown"><a class="dropdown-toggle section-scroll" href="#projects"
+                data-toggle="dropdown">Projects</a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="portfolio_single_featured_image1.html" target="_blank">Packstr</a>
+                </li>
+                <li><a
+                    href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
+                    target="_blank">Find My Fit</a>
+                </li>
+                <li><a
+                    href="https://docs.google.com/presentation/d/1D6ubbLH-KYw3eORU3NbESYzsaq4U8lElN36Cg6FG4tY/edit?usp=sharing"
+                    target="_blank">Save An Angel</a>
+                </li>
+              </ul>
+            </li>
+            <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf">Resume</a>
             </li>
             <li class="dropdown"><a href="contact.html">Contact</a>
             </li>
             <li class="dropdown"><a href="about.html">About</a>
             </li>
-            </ul>
-          </div>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
     <section class="home-section bg-dark-60 portfolio-page-header parallax-bg" id="home"
       data-background="./assets/images/AboutMeBGPhoto.jpg">
       <div class="titan-caption">
@@ -118,7 +121,8 @@
           </div>
         </div>
         <ul class="works-grid works-grid-gut works-hover-w works-grid-3" id="works-grid">
-          <li class="work-item illustration webdesign"><a href="portfolio_single_featured_image1.html">
+          <li class="work-item illustration webdesign"><a
+              href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing" target="_blank">
               <div class="work-image"><img src="assets/images/portfolio/PackstrIcon.png" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
@@ -126,7 +130,9 @@
                 <div class="work-descr">Travel App</div>
               </div>
             </a></li>
-          <li class="work-item marketing photography"><a href="portfolio_single_featured_image2.html">
+          <li class="work-item marketing photography"><a
+              href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
+              target="_blank">
               <div class="work-image"><img src="assets/images/portfolio/FindMyFitIcon.png" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
@@ -134,7 +140,9 @@
                 <div class="work-descr">Fashion Match App</div>
               </div>
             </a></li>
-          <li class="work-item illustration photography"><a href="portfolio_single_featured_slider1.html">
+          <li class="work-item illustration photography"><a
+              href="https://docs.google.com/presentation/d/1D6ubbLH-KYw3eORU3NbESYzsaq4U8lElN36Cg6FG4tY/edit?usp=sharing"
+              target="_blank">
               <div class="work-image"><img src="assets/images/portfolio/SaveAnAngelIcon.png" alt="Portfolio Item" />
               </div>
               <div class="work-caption font-alt">
@@ -216,31 +224,31 @@
         </div>
       </section> -->
       <div class="module-small bg-dark">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-3">
-                <div class="widget">
-                  <h5 class="widget-title font-alt">Let's work together</h5>
-                  <p>If you like what you see, let me know how I can be a part of your team.</p>
-                </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-3">
+              <div class="widget">
+                <h5 class="widget-title font-alt">Let's work together</h5>
+                <p>If you like what you see, let me know how I can be a part of your team.</p>
               </div>
-              <div class="col-sm-3">
-                <div class="widget">
-                  <h5 class="widget-title font-alt">Phone</h5>
-                  <p>956.453.1900</p>
-                </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="widget">
+                <h5 class="widget-title font-alt">Phone</h5>
+                <p>956.453.1900</p>
               </div>
-              <div class="col-sm-3">
-                <div class="widget">
-                  <h5 class="widget-title font-alt">Email</h5>
-                  <ul class="widget-posts">
-                    <a href="#">jameshdzdesigns@gmail.com</a>
-                  </ul>
-                </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="widget">
+                <h5 class="widget-title font-alt">Email</h5>
+                <ul class="widget-posts">
+                  <a href="#">jameshdzdesigns@gmail.com</a>
+                </ul>
               </div>
             </div>
           </div>
         </div>
+      </div>
       <hr class="divider-d">
       <footer class="footer bg-dark">
         <div class="container">
