--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
           <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
               class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
               class="icon-bar"></span></button>
-              <a class="navbar-brand" href="index.html">James Hernandez</a>
+          <a class="navbar-brand" href="index.html">James Hernandez</a>
         </div>
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -77,23 +77,24 @@
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
+                <li><a href="portfolio_single_featured_image1.html" target="_blank">Packstr</a>
                 </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My
-                    Fit</a>
+                <li><a
+                    href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
+                    target="_blank">Find My Fit</a>
                 </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An
-                    Angel</a>
+                <li><a
+                    href="https://docs.google.com/presentation/d/1D6ubbLH-KYw3eORU3NbESYzsaq4U8lElN36Cg6FG4tY/edit?usp=sharing"
+                    target="_blank">Save An Angel</a>
                 </li>
+              </ul>
             </li>
-          </ul>
-          </li>
-          <li class="dropdown"><a href="contact.html">Resume</a>
-          </li>
-          <li class="dropdown"><a href="contact.html">Contact</a>
-          </li>
-          <li class="dropdown"><a href="about.html">About</a>
-          </li>
+            <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf">Resume</a>
+            </li>
+            <li class="dropdown"><a href="contact.html">Contact</a>
+            </li>
+            <li class="dropdown"><a href="about.html">About</a>
+            </li>
           </ul>
         </div>
       </div>
