--- a/contact.html
+++ b/contact.html
@@ -27,11 +27,11 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="assets/images/favicons/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png"> -->
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/personalLogo.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <!-- <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png"> -->
-    <meta name="theme-color" content="#ffffff">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/personalLogo.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <!-- <meta name="msapplication-TileImage" content="assets/images/favicons/ms-icon-144x144.png"> -->
+  <meta name="theme-color" content="#ffffff">
   <!--  
     Stylesheets
     =============================================
@@ -63,38 +63,41 @@
       <div class="loader">Loading...</div>
     </div>
     <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
-                class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
-                class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
-          </div>
-          <div class="collapse navbar-collapse" id="custom-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li class="dropdown"><a href="index.html">Home</a>
-              </li>
-              <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#custom-collapse"><span
+              class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span
+              class="icon-bar"></span></button><a class="navbar-brand" href="index.html">James Hernandez</a>
+        </div>
+        <div class="collapse navbar-collapse" id="custom-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown"><a href="index.html">Home</a>
+            </li>
+            <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li class="dropdown"><a href="portfolio_single_featured_image1.html" data-toggle="dropdown">Packstr</a>
+                <li><a href="portfolio_single_featured_image1.html" target="_blank">Packstr</a>
                 </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Find My Fit</a>
+                <li><a
+                    href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
+                    target="_blank">Find My Fit</a>
                 </li>
-                <li class="dropdown"><a href="portfolio_single_featured_image2.html" data-toggle="dropdown">Save An Angel</a>
+                <li><a
+                    href="https://docs.google.com/presentation/d/1D6ubbLH-KYw3eORU3NbESYzsaq4U8lElN36Cg6FG4tY/edit?usp=sharing"
+                    target="_blank">Save An Angel</a>
                 </li>
+              </ul>
             </li>
-            </ul>
-            </li>
-            <li class="dropdown"><a href="contact.html">Resume</a>
+            <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf">Resume</a>
             </li>
             <li class="dropdown"><a href="contact.html">Contact</a>
             </li>
             <li class="dropdown"><a href="about.html">About</a>
             </li>
-            </ul>
-          </div>
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
     <div class="main">
       <section class="module bg-dark-60 contact-page-header bg-dark" data-background="assets/images/contact_bg.jpg">
         <div class="container">
@@ -154,48 +157,48 @@
         <div id="map"></div>
       </section>
       <div class="module-small bg-dark">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-3">
-                <div class="widget">
-                  <h5 class="widget-title font-alt">Let's work together</h5>
-                  <p>If you like what you see, let me know how I can be a part of your team.</p>
-                </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-3">
+              <div class="widget">
+                <h5 class="widget-title font-alt">Let's work together</h5>
+                <p>If you like what you see, let me know how I can be a part of your team.</p>
               </div>
-              <div class="col-sm-3">
-                <div class="widget">
-                  <h5 class="widget-title font-alt">Phone</h5>
-                  <p>956.453.1900</p>
-                </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="widget">
+                <h5 class="widget-title font-alt">Phone</h5>
+                <p>956.453.1900</p>
               </div>
-              <div class="col-sm-3">
-                <div class="widget">
-                  <h5 class="widget-title font-alt">Email</h5>
-                  <ul class="widget-posts">
-                    <a href="#">jameshdzdesigns@gmail.com</a>
-                  </ul>
-                </div>
+            </div>
+            <div class="col-sm-3">
+              <div class="widget">
+                <h5 class="widget-title font-alt">Email</h5>
+                <ul class="widget-posts">
+                  <a href="#">jameshdzdesigns@gmail.com</a>
+                </ul>
               </div>
             </div>
           </div>
         </div>
+      </div>
       <hr class="divider-d">
       <footer class="footer bg-dark">
-          <div class="container">
-            <div class="row">
-              <div class="col-sm-6">
-                <p class="copyright font-alt">&copy; 2019&nbsp;<a href="index.html">James Hernandez</a>, All Rights
-                  Reserved</p>
-              </div>
-              <div class="col-sm-6">
-                <div class="footer-social-links"><a href="#"><i class="fa fa-behance"></i></a><a href="#"><i
-                      class="fa fa-github"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i
-                      class="fa fa-linkedin"></i></a>
-                </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-6">
+              <p class="copyright font-alt">&copy; 2019&nbsp;<a href="index.html">James Hernandez</a>, All Rights
+                Reserved</p>
+            </div>
+            <div class="col-sm-6">
+              <div class="footer-social-links"><a href="#"><i class="fa fa-behance"></i></a><a href="#"><i
+                    class="fa fa-github"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i
+                    class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
-        </footer>
+        </div>
+      </footer>
     </div>
     <div class="scroll-up"><a href="#totop"><i class="fa fa-angle-double-up"></i></a></div>
   </main>
