Fixed navbar links and font-size

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="portfolio_single_featured_image1.html" target="_blank">Packstr</a>
+                <li><a href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing" target="_blank">Packstr</a>
                 </li>
                 <li><a
                     href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
