added padding to herobanner social icons

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing" target="_blank">Packstr</a>
+                <li><a href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing"
+                    target="_blank">Packstr</a>
                 </li>
                 <li><a
                     href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
@@ -108,6 +109,12 @@
           <div class="projectBtn">
             <a class="section-scroll btn btn-border-w btn-round" href="#projects">Projects</a>
           </div>
+
+          <div class="caption-social-links"><a href="#"><i class="fa fa-behance"></i></a><a href="#"><i
+                class="fa fa-github"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i
+                class="fa fa-linkedin"></i></a>
+          </div>
+
         </div>
       </div>
     </section>
@@ -258,9 +265,11 @@
                 Reserved</p>
             </div>
             <div class="col-sm-6">
-              <div class="footer-social-links"><a href="#"><i class="fa fa-behance"></i></a><a href="#"><i
-                    class="fa fa-github"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i
-                    class="fa fa-linkedin"></i></a>
+              <div class="footer-social-links">
+                <a href="#"><i class="fa fa-behance" target="_blank"></i></a>
+                <a href="https://github.com/JamesHdz" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://www.instagram.com/jamesmhdz/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/jamesmhernandez/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
