--- a/about.html
+++ b/about.html
@@ -77,7 +77,8 @@
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="index.html#projects"
                 data-toggle="dropdown">Projects</a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing" target="_blank">Packstr</a>
+                <li><a href="https://drive.google.com/file/d/12DBsDghWpV6GgA79Wj2MGJfaGMzmZUjt/view?usp=sharing"
+                    target="_blank">Packstr</a>
                 </li>
                 <li><a
                     href="https://docs.google.com/presentation/d/1E380woJLIWNk-IuIq0dBCoNNHisfdoOGFI5Gw0CMPWA/edit?usp=sharing"
@@ -359,9 +360,11 @@
                 Reserved</p>
             </div>
             <div class="col-sm-6">
-              <div class="footer-social-links"><a href="#"><i class="fa fa-behance"></i></a><a href="#"><i
-                    class="fa fa-github"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i
-                    class="fa fa-linkedin"></i></a>
+              <div class="footer-social-links">
+                <a href="#"><i class="fa fa-behance"></i></a>
+                <a href="https://github.com/JamesHdz" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://www.instagram.com/jamesmhdz/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/jamesmhernandez/" target="_blank"><i class="fa fa-linkedin"></i></a>
               </div>
             </div>
           </div>
