Took out contact page
Took out contact page entirely and instead provide contact info in footer on each page.

--- a/about.html
+++ b/about.html
@@ -92,8 +92,8 @@
             </li>
             <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf">Resume</a>
             </li>
-            <li class="dropdown"><a href="contact.html">Contact</a>
-            </li>
+            <!-- <li class="dropdown"><a href="contact.html">Contact</a>
+            </li> -->
             <li class="dropdown"><a href="about.html">About</a>
             </li>
           </ul>
@@ -170,13 +170,13 @@
         </section> -->
       <section class="module pt-30 pb-0" id="about">
         <div class="row position-relative m-0">
-          <div class="col-xs-12 col-md-6 side-image aboutMeImage" data-background="assets/images/aboutMeImage.jpg">
+          <div class="col-xs-12 col-md-6 side-image aboutMeImage" data-background="assets/images/tempPic4.jpg">
           </div>
           <div class="col-xs-12 col-md-6 col-md-offset-6 side-image-text">
             <div class="row">
               <div class="col-sm-12">
                 <div class="aboutMeText">
-                  <h2 class="module-title font-alt align-left aboutMeTitle">This is James Hernandez</h2>
+                  <h2 class="module-title font-alt align-left aboutMeTitle">A Little Bit About Myself</h2>
                   <div class="module-subtitle font-serif align-left aboutMeSubtitle">UX Designer and Creative based in
                     Austin, Texas</div>
                   <p>I am an educator turned UX designer who's driven by curiosity and passionate about design. I love
