--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown"><a href="index.html">Home</a>
+            <li class="dropdown"><a href="index.html" style="text-decoration: underline;">Home</a>
             </li>
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="#projects"
                 data-toggle="dropdown">Projects</a>
@@ -91,8 +91,8 @@
             </li>
             <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf">Resume</a>
             </li>
-            <li class="dropdown"><a href="contact.html">Contact</a>
-            </li>
+            <!-- <li class="dropdown"><a href="contact.html">Contact</a>
+            </li> -->
             <li class="dropdown"><a href="about.html">About</a>
             </li>
           </ul>
@@ -100,7 +100,7 @@
       </div>
     </nav>
     <section class="home-section bg-dark-60 portfolio-page-header parallax-bg" id="home"
-      data-background="./assets/images/AboutMeBGPhoto.jpg">
+      data-background="./assets/images/heroPic9.jpg">
       <div class="titan-caption">
         <div class="caption-content">
           <div class="font-alt mb-30 titan-title-size-1">Hello, I am</div>
@@ -135,6 +135,7 @@
               <div class="work-caption font-alt">
                 <h3 class="work-title">Packstr</h3>
                 <div class="work-descr">Travel App</div>
+                <p>UX/UI Design, UX Research</p>
               </div>
             </a></li>
           <li class="work-item marketing photography"><a
@@ -145,6 +146,7 @@
               <div class="work-caption font-alt">
                 <h3 class="work-title">Find My Fit</h3>
                 <div class="work-descr">Fashion Match App</div>
+                <p>UX/UI Design, UX Research</p>
               </div>
             </a></li>
           <li class="work-item illustration photography"><a
@@ -155,20 +157,21 @@
               <div class="work-caption font-alt">
                 <h3 class="work-title">Save An Angel</h3>
                 <div class="work-descr">Non-Profit Pet Rescue Website</div>
+                <p>UX/UI Design, UX Research</p>
               </div>
             </a></li>
         </ul>
       </section>
-      <section class="module-small-home bg-dark">
+      <!-- <section class="module-small-home bg-dark">
         <div class="container">
           <div class="row">
             <div class="col-sm-6 col-sm-offset-3 text-center">
-              <h4 class="font-alt mb-20">Let's work together</h4><a class="btn btn-border-w" href="contact.html">Contact
+              <h4 class="font-alt mb-20">Let's work together</h4><a class="btn btn-border-w" href="contact.html">Connect With
                 Me</a>
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!-- <section class="module" id="news">
         <div class="container">
           <div class="row">
