Bolded nav links when on inidividual page

--- a/about.html
+++ b/about.html
@@ -90,11 +90,11 @@
                 </li>
               </ul>
             </li>
-            <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf">Resume</a>
+            <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf" target="_blank">Resume</a>
             </li>
             <!-- <li class="dropdown"><a href="contact.html">Contact</a>
             </li> -->
-            <li class="dropdown"><a href="about.html">About</a>
+            <li class="dropdown"><a href="about.html" style="font-weight: bold;">About</a>
             </li>
           </ul>
         </div>
