--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="dropdown"><a href="index.html" style="text-decoration: underline;">Home</a>
+            <li class="dropdown"><a href="index.html" style="font-weight: bold;"><b>Home</b></a>
             </li>
             <li class="dropdown"><a class="dropdown-toggle section-scroll" href="#projects"
                 data-toggle="dropdown">Projects</a>
@@ -89,7 +89,7 @@
                 </li>
               </ul>
             </li>
-            <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf">Resume</a>
+            <li class="dropdown"><a href="./assets/resume/JamesHernandez_Resume.pdf" target="_blank">Resume</a>
             </li>
             <!-- <li class="dropdown"><a href="contact.html">Contact</a>
             </li> -->
