Added external links to social media icons

--- a/index.html
+++ b/index.html
@@ -110,9 +110,11 @@
             <a class="section-scroll btn btn-border-w btn-round" href="#projects">Projects</a>
           </div>
 
-          <div class="caption-social-links"><a href="#"><i class="fa fa-behance"></i></a><a href="#"><i
-                class="fa fa-github"></i></a><a href="#"><i class="fa fa-instagram"></i></a><a href="#"><i
-                class="fa fa-linkedin"></i></a>
+          <div class="caption-social-links">
+            <a href="#" target="_blank"><i class="fa fa-behance"></i></a>
+            <a href="https://github.com/JamesHdz" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="https://www.instagram.com/jamesmhdz/" target="_blank"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/jamesmhernandez/" target="_blank"><i class="fa fa-linkedin"></i></a>
           </div>
 
         </div>
