--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Document Title
     =============================================
     -->
-  <title>James Hernandez Designs</title>
+  <title>James Hernandez</title>
   <!--  
     Favicons
     =============================================
@@ -100,7 +100,7 @@
       </div>
     </nav>
     <section class="home-section bg-dark-60 portfolio-page-header parallax-bg" id="home"
-      data-background="./assets/images/heroPic9.jpg">
+      data-background="./assets/images/heroPic10.jpg">
       <div class="titan-caption">
         <div class="caption-content">
           <div class="font-alt mb-30 titan-title-size-1">Hello, I am</div>
