Tried to change color of brand/logo while background was black.
No luck

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">James Hernandez</a>
+          <a class="navbar-brand brand-color" href="index.html">James Hernandez</a>
         </div>
         <div class="collapse navbar-collapse" id="custom-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -305,6 +305,7 @@
   <script src="assets/lib/simple-text-rotator/jquery.simple-text-rotator.min.js"></script>
   <script src="assets/js/plugins.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
